--- a/app/src/main/res/layout/error_dialog.xml
+++ b/app/src/main/res/layout/error_dialog.xml
@@ -29,7 +29,8 @@
 			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
 			android:orientation="vertical"
-			android:background="@drawable/content_box">
+			android:background="@drawable/content_box"
+			android:padding="4dp">
 
 			<TextView
 				android:id="@+id/error_dialog_introduction"
