--- a/app/src/main/res/anim/menu_panel_in.xml
+++ b/app/src/main/res/anim/menu_panel_in.xml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-    android:shareInterpolator="false">
-	<translate
-		android:fromXDelta="0"  
-		android:fromYDelta="0"  
-		android:toXDelta="-100%"
-		android:toYDelta="0"  
-		android:duration="500"/>  
+<set xmlns:android="http://schemas.android.com/apk/res/android">
 	<scale
 		android:fromXScale= "1.0"  
-		android:toXScale= "0.8"  
+		android:toXScale= "0"  
 		android:fromYScale= "1.0"  
-		android:toYScale= "0.8"  
-		android:pivotX= "50%"  
-		android:pivotY= "50%"  
-		android:duration= "500"/>
+		android:toYScale= "0"  
+		android:pivotX= "0%"  
+		android:pivotY= "0%"  
+		android:duration= "150"/>
 </set>
