--- a/app/src/main/res/anim/text_box_out.xml
+++ b/app/src/main/res/anim/text_box_out.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-    android:shareInterpolator="false">
+<set xmlns:android="http://schemas.android.com/apk/res/android">
 	<translate
 		android:fromXDelta="0"  
 		android:fromYDelta="-100%"  
 		android:toXDelta="0"  
 		android:toYDelta="0"  
-		android:duration="1000"/>  
-	<alpha 
-		android:fromAlpha= "0.0"  
-		android:toAlpha= "1.0"  
-		android:duration= "1000"/> 
+		android:duration="500"/>  
 </set>
 
