3d重制未完成

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -276,7 +276,7 @@
 		android:textColor="#FFFFFFFF"
 		android:textSize="10sp"
 		android:layout_gravity="bottom|left"
-		android:gravity="center"
+		android:gravity="left|center_vertical"
 		android:layout_margin="2dp"/>
 
 </FrameLayout>
